--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/logo.png
-     - assets/Facebook.jpg
+     - assets/Facebook.png
      - assets/google.png
      - assets/x.jpg
 
