--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.0
+  firebase_core: ^2.17.0
+  firebase_auth: ^4.10.1
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_test:
