--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,3 +60,7 @@ android {
 flutter {
     source '../..'
 }
+
+dependencies {
+    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
+}
