--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.17.0
   firebase_auth: ^4.10.1
   google_sign_in: ^6.1.5
+  flutter_facebook_auth: ^5.0.9
 
 dev_dependencies:
   flutter_test:
